<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.janetaa.sendflowersapp.FlowerSelection">

    <TextView
        android:id="@+id/lblFlowerSelection"
        android:layout_width="320dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/lblFlowerSelection"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <CheckedTextView
        android:id="@+id/txtRoses"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:checkMark="?android:attr/textCheckMark"
        android:text="@string/txtRoses"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblFlowerSelection" />

    <TextView
        android:id="@+id/lblSelectSize"
        android:layout_width="124dp"
        android:layout_height="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="43dp"
        android:text="@string/lblSelectSize"
        android:textAlignment="viewStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChrysantemums" />

    <Spinner
        android:id="@+id/spnBouquetSize"
        android:layout_width="191dp"
        android:layout_height="24dp"
        android:layout_marginRight="8dp"
        android:entries="@array/spnBouquetSize"
        android:spinnerMode="dropdown"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toRightOf="@+id/lblSelectSize"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.822"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtPriceChrysantemums" />

    <TextView
        android:id="@+id/lblSelectColor"
        android:layout_width="116dp"
        android:layout_height="22dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="17dp"
        android:text="@string/lblSelectColor"
        android:textAlignment="viewStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSelectSize" />

    <CheckedTextView
        android:id="@+id/txtCarnations"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:checkMark="?android:attr/textCheckMark"
        android:checked="false"
        android:text="@string/txtCarnations"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRoses" />

    <CheckedTextView
        android:id="@+id/txtTulips"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:checkMark="?android:attr/textCheckMark"
        android:text="@string/txtTulips"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCarnations" />

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="124dp"
        android:layout_height="42dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/btnBuy"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <CheckedTextView
        android:id="@+id/txtChrysantemums"
        android:layout_width="208dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:checkMark="?android:attr/textCheckMark"
        android:text="@string/txtChrysanthemums"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtOrchids" />

    <CheckedTextView
        android:id="@+id/txtOrchids"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:checkMark="?android:attr/textCheckMark"
        android:text="@string/txtOrchids"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtLilies" />

    <CheckedTextView
        android:id="@+id/txtLilies"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:checkMark="?android:attr/textCheckMark"
        android:text="@string/txtLilies"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTulips" />

    <Spinner
        android:id="@+id/spnColor"
        android:layout_width="190dp"
        android:layout_height="27dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:entries="@array/spnColor"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintLeft_toRightOf="@+id/lblSelectColor"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnBouquetSize" />

    <TextView
        android:id="@+id/txtPriceRoses"
        android:layout_width="194dp"
        android:layout_height="55dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="-23dp"
        android:layout_marginTop="0dp"
        android:lineSpacingExtra="2sp"
        android:text="@string/txtPriceRoses"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toRightOf="@+id/txtRoses"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblFlowerSelection" />

    <TextView
        android:id="@+id/txtPriceCarnations"
        android:layout_width="194dp"
        android:layout_height="55dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="0dp"
        android:lineSpacingExtra="2sp"
        android:text="@string/txtPriceCarnations"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/txtCarnations"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPriceRoses" />

    <TextView
        android:id="@+id/txtPriceTulips"
        android:layout_width="194dp"
        android:layout_height="55dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="0dp"
        android:lineSpacingExtra="2sp"
        android:text="@string/txtPriceTulips"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/txtTulips"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPriceCarnations" />

    <TextView
        android:id="@+id/txtPriceLilies"
        android:layout_width="194dp"
        android:layout_height="55dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="0dp"
        android:lineSpacingExtra="2sp"
        android:text="@string/txtPriceLilies"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/txtLilies"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPriceTulips" />

    <TextView
        android:id="@+id/txtPriceChrysantemums"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_marginRight="16dp"
        android:lineSpacingExtra="2sp"
        android:text="@string/txtPriceChrysantemums"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/txtChrysantemums"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtPriceOrchids" />

    <TextView
        android:id="@+id/txtPriceOrchids"
        android:layout_width="194dp"
        android:layout_height="55dp"
        android:layout_marginRight="8dp"
        android:lineSpacingExtra="2sp"
        android:text="@string/txtPriceOrchids"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/txtOrchids"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtPriceLilies"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>
