<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.janetaa.sendflowersapp.Summary">

    <TextView
        android:id="@+id/lblOrder"
        android:layout_width="240dp"
        android:layout_height="31dp"
        android:text="@string/lblOrder"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:text="@string/txtName"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/lblOrder" />

    <TextView
        android:id="@+id/txtPh"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:text="@string/lblPhone"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:text="@string/txtAddress"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/txtPh" />

    <TextView
        android:id="@+id/lblSum"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/lblSum"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

    <EditText
        android:id="@+id/txtOrder"
        android:layout_width="342dp"
        android:layout_height="192dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSum"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="182dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="22dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblOrder" />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="182dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="22dp"
        app:layout_constraintLeft_toRightOf="@+id/txtPh"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName"
        app:layout_constraintHorizontal_bias="0.755" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="182dp"
        android:layout_height="30dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/txtAddress"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone"
        app:layout_constraintHorizontal_bias="0.911" />

</android.support.constraint.ConstraintLayout>
